[project]
name = "ballot"
version = "0.1.0"
description = "Singapore BTO Flat Affordability Calculator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
ballot = "main:main"
